document issue with Java 17